[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Car.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Drawing.gd" type="Script" id=3]
[ext_resource path="res://assets/Kenney Future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://number.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/car_black_small_5.png" type="Texture" id=6]
[ext_resource path="res://maps/drifters-map04.tmx" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0, 1, 0.0390625, 1, 1, 0, 0, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 200

[sub_resource type="StyleBoxTexture" id=5]
texture = SubResource( 4 )
region_rect = Rect2( 0, 0, 2048, 1 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 21, 236 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 21, 236 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="car" parent="." instance=ExtResource( 2 )]
position = Vector2( 826, 419 )

[node name="Trackmarks" type="Node2D" parent="."]
z_index = 1
z_as_relative = false
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 80.0
rect_min_size = Vector2( 390, 70 )
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Control"]
margin_right = 190.0
margin_bottom = 50.0
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_laptime" type="Label" parent="UI/Control/ColorRect"]
margin_left = 5.0
margin_top = 2.0
margin_right = 92.0
margin_bottom = 23.0
text = "This lap"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nbr_laptime" type="Label" parent="UI/Control/ColorRect"]
margin_left = 5.0
margin_top = 15.0
margin_right = 185.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 5 )
text = "0.00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="UI/Control"]
margin_left = 200.0
margin_right = 390.0
margin_bottom = 50.0
rect_min_size = Vector2( 190, 50 )
color = Color( 0, 0, 0, 0.313726 )

[node name="lbl_lastlap" type="Label" parent="UI/Control/ColorRect2"]
margin_left = 5.0
margin_top = 2.0
margin_right = 100.0
margin_bottom = 18.0
text = "Last"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nbr_lastlap" type="Label" parent="UI/Control/ColorRect2"]
margin_left = 60.0
margin_top = 2.0
margin_right = 188.0
margin_bottom = 17.6028
text = "0.000"
align = 2

[node name="lbl_bestlap" type="Label" parent="UI/Control/ColorRect2"]
margin_left = 5.0
margin_top = 28.0
margin_right = 185.0
margin_bottom = 18.0
text = "Best"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nbr_bestlap" type="Label" parent="UI/Control/ColorRect2"]
margin_left = 60.0
margin_top = 28.0
margin_right = 188.0
margin_bottom = 44.0
text = "0.000"
align = 2

[node name="ColorRect3" type="ColorRect" parent="UI/Control"]
margin_left = 962.0
margin_right = 1262.0
margin_bottom = 211.0
rect_min_size = Vector2( 190, 50 )
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_best_names" type="Label" parent="UI/Control/ColorRect3"]
margin_left = 5.0
margin_top = 2.0
margin_right = 100.0
margin_bottom = 18.0
text = "1
2
3
4
5
6
7
8
9
10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_best_times" type="Label" parent="UI/Control/ColorRect3"]
margin_left = 203.363
margin_top = 2.0
margin_right = 298.363
margin_bottom = 20.0
text = "1
2
3
4
5
6
7
8
9
10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pb_speed" type="ProgressBar" parent="UI"]
margin_left = 10.0
margin_top = 70.0
margin_right = 200.0
margin_bottom = 74.0
rect_min_size = Vector2( 190, 16 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loader" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="UI/Loader"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -18.0
margin_right = 158.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 7 )
text = "Loading Track..."
align = 1
valign = 1

[node name="Label" type="Label" parent="UI"]
margin_left = 9.0
margin_top = 107.0
margin_right = 49.0
margin_bottom = 121.0
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalLine" type="Area2D" parent="."]
position = Vector2( 2242, 256 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLine"]
shape = SubResource( 8 )

[node name="Checkpoint" type="Area2D" parent="."]
position = Vector2( 1397, 1920 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Checkpoint"]
shape = SubResource( 9 )

[node name="ghost" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 1959.74, 1470.28 )
z_index = 4
texture = ExtResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="drifters-map04" parent="." instance=ExtResource( 7 )]
[connection signal="body_entered" from="GoalLine" to="." method="_on_GoalLine_body_entered"]
[connection signal="body_entered" from="Checkpoint" to="." method="_on_Checkpoint_body_entered"]
